# gamestastus-api

./: LICENSE  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/gamestatus-api/: __init__.py  example.py
