[metadata]
name = gamestatus_api-nikidziuba
version = 1.0.0
author = Nikodem Dziuba
author_email = github.nikodem.dziuba@gmail.com
description = A python gamestatus.info API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikidziuba/gamestatus-python-api
project_urls =
    Bug Tracker = https://github.com/nikidziuba/gamestatus-python-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src